{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Movement",
            "id": "b4379303-d25a-439a-a3a9-f22be94619b3",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "964cbb5b-47ca-455b-92ae-d7ae0f425c81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "a0968ed2-77b6-4f5a-8afd-5cf9ef5a57e2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SprintStart",
                    "type": "Button",
                    "id": "0d0a8114-0355-4f9d-967c-8e2682ead46f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SprintFinish",
                    "type": "Button",
                    "id": "c4805c94-3a63-4843-a8fb-ec0d005850dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "fa418583-8ab7-462c-88a1-c3d30da77d3c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2e212ac8-5c04-4fd0-847f-31efccf076c6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aec20fae-75f2-49ee-bfb9-717c0a5a5d5e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "869e63d2-9046-4263-ad93-27e71e11b3c4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "948391f4-7e1f-48e6-9a79-7acee2af865c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bd5862b6-8c83-4a84-bd7f-d4ff2f6f9274",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e91f183e-b7e8-4146-95c4-750ff4aa080e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SprintStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94ecf2ca-068f-4129-8329-e2d5a2afaf17",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SprintFinish",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Actions",
            "id": "231f4471-3358-4dd5-a2cc-1903eb5300a2",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3d362fdb-8227-4c87-9f92-1eb015243249",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SuperJump",
                    "type": "Button",
                    "id": "2e092b06-22e0-419e-8870-3886550e635d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09498960-0577-4a55-9e5c-c412cfafd9db",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6ad5c81-1e90-4a36-8a0c-1ab57b4ab09c",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold(duration=3,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "SuperJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MouseScroll",
            "id": "954c8de5-3855-4706-afec-221277a68b89",
            "actions": [
                {
                    "name": "Scroll",
                    "type": "PassThrough",
                    "id": "c47cf45e-6b5c-4fbb-907d-66a6ceba1f7f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "80142eab-fccc-4be1-a247-00006029cd26",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}